# Framer

./: .gitignore  COMMIT_HISTORY.md  EVENT_PLAN.md  OCT2_CHANGES_EXPLAINED.md  README.md  TASK_WINDOWS_EVENT_PAGE.md  TYPESCRIPT_FILES_EXPLAINED.md  VIDEO_FEATURES.md  db.md  db.py  debug_timeline.py  design.md  faster.py  frame_data.md  gui.py  gui_new.py  merge_media.py  merge_media_db.py  mkv_ingest_config.json  path_utils.py  realtime_transcriber.py  requirements_mkv_ingest.txt  server.py  sound_cli_text.txt  speech_silence.py  test_speech_silence.py  transcriber.py  video_cli_text.txt  video_frame2.md
cli/: audio_recorder_cli.py  gui_cli.py  mkv_ingest.py
data/timestone/: super_tray_config.json
experiments/pause_segment_demo/: README.md  segment_tracking_transcriber.py
tools/: run_file_tapper.ps1  run_timestone.ps1
tools/dual_capture_launcher/: README.md  dual_capture_launcher.py
tools/mediamtx/: mediamtx.yml
tools/scripts/: obs_video_probe.py  timestone_ocr_frame.py  timestone_transcribe_segment.py  timestone_transcribe_videos.py  timestone_transcripts_query.py
tools/timestone_file_tapper/: Cargo.toml
tools/timestone_frame_tapper/: Cargo.toml
tools/timestone_obs_ws/: Cargo.toml
tools/timestone_obs_ws/src/: main.rs
tools/timestone_overlay/: Cargo.toml
tools/timestone_recorder/: Cargo.toml
tools/timestone_recorder/src/: main.rs
tools/timestone_super_tray/: Cargo.toml
tools/timestone_tray/: Cargo.toml
tools/timestone_tray/src/: main.rs
tools/timestone_window/: Cargo.toml
web/: .gitignore  next.config.mjs  package-lock.json  package.json  tsconfig.json
web/app/: layout.tsx  page.tsx
web/lib/: api.ts  time.ts
web/scripts/: merge_metadata.py  mkv_metadata.py  mkv_window_clips.py  timestone_event_frames.py  timestone_event_ocr.py  (+10 more)
(+65 files in other folders)
